letter-spacing fix

--- a/static/css/partials/_component.connect.scss
+++ b/static/css/partials/_component.connect.scss
@@ -77,6 +77,7 @@
 	margin-top:26px;
 	font-size:rem(18);
 	font-weight:$light;
+	letter-spacing:0.4px;
 }
 .connect__announce\@sm {
 	@media #{$media-mobile} {
